refactor: remove eager stringification, add benchmark, add fancy formatting